--- a/webapp/app/templates/input.html
+++ b/webapp/app/templates/input.html
@@ -52,13 +52,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Vacation Finder</a>
+          <a class="navbar-brand" href="/">Vacation Finder</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><a href="/">Home</a></li>
+            <li><a href="https://github.com/ktaliaferro/VacationFinder">GitHub</a></li>
+            <!--
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
+            -->
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -73,7 +76,7 @@
         <!--
         <p>coffee<br>surfing<br>golf<br>volunteering<br>hiking<br>biking<br>football<br>museums<br>basketball<br>baseball<br>skiing<br>boats<br>soccer<br>kayaking<br>swimming</p>
         -->
-        <p>Input your interests, separated by commas.</p>
+        <p>Input up to 10 interests, separated by commas.</p>
     </div>
 
     <div class = "container">
