don't display irrelevant interests and destinations at all

--- a/webapp/app/templates/input.html
+++ b/webapp/app/templates/input.html
@@ -76,7 +76,7 @@
         <!--
         <p>coffee<br>surfing<br>golf<br>volunteering<br>hiking<br>biking<br>football<br>museums<br>basketball<br>baseball<br>skiing<br>boats<br>soccer<br>kayaking<br>swimming</p>
         -->
-        <p>Input up to 10 interests, separated by commas.</p>
+        <p>Input up to ten one-word interests, separated by commas.</p>
     </div>
 
     <div class = "container">
@@ -84,7 +84,7 @@
       <form  action="/output" method="GET">
         <div class="form-group">
           <label for="ID">Interests:</label>
-          <input type="text" id="ID" name='ID' placeholder="e.g. ">
+          <input type="text" id="ID" name='ID' placeholder="">
         </div>
 
         <div>
