--- a/webapp/app/templates/input.html
+++ b/webapp/app/templates/input.html
@@ -58,6 +58,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">Home</a></li>
             <li><a href="https://github.com/ktaliaferro/VacationFinder">GitHub</a></li>
+            <li><a href="/slides">Slides</a></li>
             <!--
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
