--- a/webapp/app/templates/output.html
+++ b/webapp/app/templates/output.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Vacation Finder</title>
+    <title>Vacation Finder - Results</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
